--- a/index.html
+++ b/index.html
@@ -269,18 +269,20 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Misión</h2>
         <p>
-          <span>Nuestra</span> <span class="description-title">misión</span>
+          <span>Nuestra</span> <span class="description-title">Misión</span>
         </p>
       </div>
       <!-- End Section Title -->
 
       <div class="container">
         <div class="row gy-4">
-          <h5 style="text-align: justify;">
-            Somos una firma de auditoria multidisciplinaria, con un equipo capacitado en la búsqueda de la excelencia y
-            la satisfacción de nuestros clientes a través de la implementación de los marcos legales que salvaguardan la
-            imagen e integridad del auditor.
-          </h5>
+          <div class="col-lg-8 d-flex flex-column justify-content-start">
+            <h5 style="text-align: justify;">
+              Somos una firma de auditoria multidisciplinaria, con un equipo capacitado en la búsqueda de la excelencia
+              y la satisfacción de nuestros clientes a través de la implementación de los marcos legales que salvaguardan
+              la imagen e integridad del auditor.
+            </h5>
+          </div>
         </div>
       </div>
     </section>
@@ -299,11 +301,13 @@
       <!-- End Section Title -->
       <div class="container">
         <div class="row gy-4">
+          <div class="col-lg-8 d-flex flex-column justify-content-start">
           <h5 style="text-align: justify;">
             Conformarnos como una empresa líder y solida a nivel nacional, en la gestión y manejo de servicios contables
             y de auditoria con un trabajo de alta calidad y gran prestigio en el área, contribuyendo al desarrollo
             profesional y económico de nuestros clientes, superando sus expectativas.
           </h5>
+          </div>
         </div>
       </div>
 
@@ -438,186 +442,75 @@
     <section id="objetivos" class="objetivos section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>objetivos</h2>
+        <h2>Objetivos</h2>
         <p>
-          <span>Our Hardworking</span>
-          <span class="description-title">objetivos</span>
+          <span>Conoce nuestro principal </span>
+          <span class="description-title">Objetivo</span>
         </p>
       </div>
       <!-- End Section Title -->
 
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="objetivos-member">
-              <div class="member-img">
-                <img src="assets/img/objetivos/objetivos-1.jpg" class="img-fluid" alt="" />
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-              </div>
-            </div>
+          <div class="col-lg-8 d-flex flex-column justify-content-start">
+          <h4 style="text-align: justify;">
+            Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria
+          </h4>
           </div>
-          <!-- End objetivos Member -->
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="objetivos-member">
-              <div class="member-img">
-                <img src="assets/img/objetivos/objetivos-2.jpg" class="img-fluid" alt="" />
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-              </div>
-            </div>
-          </div>
-          <!-- End objetivos Member -->
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="objetivos-member">
-              <div class="member-img">
-                <img src="assets/img/objetivos/objetivos-3.jpg" class="img-fluid" alt="" />
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div>
-          <!-- End objetivos Member -->
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
-            <div class="objetivos-member">
-              <div class="member-img">
-                <img src="assets/img/objetivos/objetivos-4.jpg" class="img-fluid" alt="" />
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-              </div>
-            </div>
-          </div>
-          <!-- End objetivos Member -->
         </div>
       </div>
     </section>
     <!-- /objetivos Section -->
 
-    <!-- Pricing Section -->
-    <section id="pricing" class="pricing section">
+    <!-- servicios Section -->
+    <section id="servicios" class="servicios section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Pricing</h2>
+        <h2>Servicios</h2>
         <p>
-          <span>Check our</span>
-          <span class="description-title">Pricing</span>
+          <span>Conoce nuestros</span>
+          <span class="description-title">Servicios</span>
         </p>
       </div>
       <!-- End Section Title -->
 
       <div class="container">
         <div class="row gy-3">
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="pricing-item">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
+         <h3>Auditorías</h3>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="servicios-item featured">
+              <h3>Auditoría Financiera</h3>
+              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contactanos" class="btn-buy">Contáctanos</a>
               </div>
             </div>
           </div>
-          <!-- End Pricing Item -->
-
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="pricing-item featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
+          <!-- End servicios Item -->
+<div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="servicios-item featured">
+              <h3>Auditoría Financiera</h3>
+              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contactanos" class="btn-buy">Contáctanos</a>
               </div>
             </div>
           </div>
-          <!-- End Pricing Item -->
-
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="pricing-item">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
+          <!-- End servicios Item -->
+           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="servicios-item featured">
+              <h3>Auditoría Financiera</h3>
+              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contactanos" class="btn-buy">Contáctanos</a>
               </div>
             </div>
           </div>
-          <!-- End Pricing Item -->
-
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="pricing-item">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-          <!-- End Pricing Item -->
+          <!-- End servicios Item -->
         </div>
       </div>
     </section>
-    <!-- /Pricing Section -->
+    <!-- /servicios Section -->
 
     <!-- Faq Section -->
     <section id="faq" class="faq section light-background">
