--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row gy-3">
+        <div class="row gy-3 servicios">
          <h3>Auditorías</h3>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="servicios-item featured">
@@ -487,22 +487,39 @@
             </div>
           </div>
           <!-- End servicios Item -->
-<div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="servicios-item featured">
-              <h3>Auditoría Financiera</h3>
-              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
+
+          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item">
+              <h3>Developer</h3>
+              <h4><sup>$</sup>29<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
               <div class="btn-wrap">
-                <a href="#contactanos" class="btn-buy">Contáctanos</a>
+                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
           <!-- End servicios Item -->
-           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="servicios-item featured">
-              <h3>Auditoría Financiera</h3>
-              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
+
+          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item">
+              <span class="advanced">Advanced</span>
+              <h3>Ultimate</h3>
+              <h4><sup>$</sup>49<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
               <div class="btn-wrap">
-                <a href="#contactanos" class="btn-buy">Contáctanos</a>
+                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
