--- a/index.html
+++ b/index.html
@@ -475,14 +475,21 @@
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row gy-3 servicios">
-         <h3>Auditorías</h3>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="row gy-3">
+         
+          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="servicios-item featured">
-              <h3>Auditoría Financiera</h3>
-              <p>Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria</p>
+              <h3>Business</h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
               <div class="btn-wrap">
-                <a href="#contactanos" class="btn-buy">Contáctanos</a>
+                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
