--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       <div class="container">
         <div class="row gy-3">
          
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="servicios-item featured">
               <h3>Business</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
@@ -495,7 +495,7 @@
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="servicios-item">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -506,6 +506,7 @@
                 <li>Pharetra massa</li>
                 <li>Massa ultricies mi</li>
               </ul>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo excepturi provident tenetur.</p>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
@@ -513,7 +514,7 @@
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="servicios-item">
               <span class="advanced">Advanced</span>
               <h3>Ultimate</h3>
