--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
       <!-- End Section Title -->
 
       <div class="container">
+        <h3>Auditorías</h3>
         <div class="row gy-3">
-         
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="servicios-item featured">
               <h3>Business</h3>
@@ -496,7 +496,7 @@
           <!-- End servicios Item -->
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item">
+            <div class="servicios-item featured">
               <h3>Developer</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo excepturi provident tenetur.</p>
               <div class="btn-wrap">
