--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
           <div class="col-lg-8 d-flex flex-column justify-content-start">
             <h5 style="text-align: justify;">
               Somos una firma de auditoria multidisciplinaria, con un equipo capacitado en la búsqueda de la excelencia
-              y la satisfacción de nuestros clientes a través de la implementación de los marcos legales que salvaguardan
+              y la satisfacción de nuestros clientes a través de la implementación de los marcos legales que
+              salvaguardan
               la imagen e integridad del auditor.
             </h5>
           </div>
@@ -302,11 +303,12 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-8 d-flex flex-column justify-content-start">
-          <h5 style="text-align: justify;">
-            Conformarnos como una empresa líder y solida a nivel nacional, en la gestión y manejo de servicios contables
-            y de auditoria con un trabajo de alta calidad y gran prestigio en el área, contribuyendo al desarrollo
-            profesional y económico de nuestros clientes, superando sus expectativas.
-          </h5>
+            <h5 style="text-align: justify;">
+              Conformarnos como una empresa líder y solida a nivel nacional, en la gestión y manejo de servicios
+              contables
+              y de auditoria con un trabajo de alta calidad y gran prestigio en el área, contribuyendo al desarrollo
+              profesional y económico de nuestros clientes, superando sus expectativas.
+            </h5>
           </div>
         </div>
       </div>
@@ -453,9 +455,9 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-8 d-flex flex-column justify-content-start">
-          <h4 style="text-align: justify;">
-            Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria
-          </h4>
+            <h4 style="text-align: justify;">
+              Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria
+            </h4>
           </div>
         </div>
       </div>
@@ -477,35 +479,33 @@
       <div class="container">
         <h3>Auditorías</h3>
         <div class="row gy-3">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="servicios-item featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-          <!-- End servicios Item -->
-
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="servicios-item featured">
-              <h3>Developer</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo excepturi provident tenetur.</p>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
+              <h3>Auditoría Financiera</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
+                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
+                excepturi provident tenetur.</p>
             </div>
           </div>
           <!-- End servicios Item -->
-
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured">
+              <h3>Auditoría Financiera</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
+                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
+                excepturi provident tenetur.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured">
+              <h3>Auditoría Financiera</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
+                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
+                excepturi provident tenetur.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="servicios-item">
               <span class="advanced">Advanced</span>
