--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
             <li><a href="#vision">Visión</a></li>
             <li><a href="#objetivos">Objetivos</a></li>
             <li class="dropdown">
-              <a href="#"><span>Servicios</span>
+              <a href="#servicios"><span>Servicios</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li class="dropdown">
-                  <a href="#"><span>Auditorías</span>
+                  <a href="#auditorias"><span>Auditorías</span>
                     <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                   <ul>
-                    <li><a href="#">Auditoría Financiera</a></li>
-                    <li><a href="#">Auditoría Forense</a></li>
-                    <li><a href="#">Auditoría Fiscal</a></li>
-                    <li><a href="#">Auditoría Operativa</a></li>
-                    <li><a href="#">Auditoría De Cumplimiento</a></li>
-                    <li><a href="#">Auditoría De Gestión</a></li>
-                    <li><a href="#">Auditoría De Sistemas</a></li>
-                    <li><a href="#">Auditoría Gubernamentales</a></li>
-                    <li><a href="#">Auditoría De Cierre de Ejercicio</a></li>
+                    <li><a href="#auditoria-financiera">Auditoría Financiera</a></li>
+                    <li><a href="#auditoria-forense">Auditoría Forense</a></li>
+                    <li><a href="#auditoria-fiscal">Auditoría Fiscal</a></li>
+                    <li><a href="#auditoria-operativa">Auditoría Operativa</a></li>
+                    <li><a href="#auditoria-cumplimiento">Auditoría De Cumplimiento</a></li>
+                    <li><a href="#auditoria-gestion">Auditoría De Gestión</a></li>
+                    <li><a href="#auditoria-sistemas">Auditoría De Sistemas</a></li>
+                    <li><a href="#auditoria-gubernamental">Auditoría Gubernamentales</a></li>
+                    <li><a href="#auditoria-cierre-ejercicio">Auditoría De Cierre de Ejercicio</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
@@ -276,7 +276,7 @@
 
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-8 d-flex flex-column justify-content-start">
+          <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h5 style="text-align: justify;">
               Somos una firma de auditoria multidisciplinaria, con un equipo capacitado en la búsqueda de la excelencia
               y la satisfacción de nuestros clientes a través de la implementación de los marcos legales que
@@ -302,7 +302,7 @@
       <!-- End Section Title -->
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-8 d-flex flex-column justify-content-start">
+          <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h5 style="text-align: justify;">
               Conformarnos como una empresa líder y solida a nivel nacional, en la gestión y manejo de servicios
               contables
@@ -454,11 +454,13 @@
 
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-8 d-flex flex-column justify-content-start">
-            <h4 style="text-align: justify;">
+
+          <div class="col-lg-8 d-flex flex-column justify-content-center">
+            <h5 style="text-align: justify;">
               Mantenernos con un juicio profesional e imparcial en nuestros servicios contables y auditoria
-            </h4>
+            </h5>
           </div>
+
         </div>
       </div>
     </section>
@@ -476,54 +478,91 @@
       </div>
       <!-- End Section Title -->
 
-      <div class="container">
+      <div class="container" id="auditorias">
         <h3>Auditorías</h3>
+        <p>En Auditores Asociados S.A., ofrecemos un portafolio completo de servicios de auditoría diseñados para
+          fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
+          decisiones estratégicas.</p>
         <div class="row gy-3">
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured">
+            <div class="servicios-item featured" id="auditoria-financiera">
               <h3>Auditoría Financiera</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
-                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
-                excepturi provident tenetur.</p>
+              <p style="text-align: justify;">Verificamos la razonabilidad e integridad de sus estados financieros
+                conforme a las normativas locales e internacionales (NIIF). Nuestro dictamen independiente otorga
+                credibilidad y confianza a sus accionistas, entidades financieras y socios comerciales, facilitando el
+                acceso a nuevas oportunidades de inversión y crédito.</p>
             </div>
           </div>
           <!-- End servicios Item -->
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured">
-              <h3>Auditoría Financiera</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
-                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
-                excepturi provident tenetur.</p>
+            <div class="servicios-item featured" id="auditoria-forense">
+              <h3>Auditoría Forense</h3>
+              <p style="text-align: justify;">Cuando sospecha de irregularidades, fraude o malas prácticas, nuestro
+                equipo especializado interviene para investigar y documentar la evidencia. Realizamos un análisis
+                minucioso para detectar y cuantificar fraudes, prevenir futuras pérdidas y proporcionar el soporte
+                técnico necesario en caso de disputas o litigios legales.</p>
             </div>
           </div>
           <!-- End servicios Item -->
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured">
-              <h3>Auditoría Financiera</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia provident non animi officiis at autem
-                laborum impedit repudiandae totam, aspernatur excepturi dolor hic. Veritatis, error magni explicabo
-                excepturi provident tenetur.</p>
+            <div class="servicios-item featured" id="auditoria-fiscal">
+              <h3>Auditoría Fiscal</h3>
+              <p style="text-align: justify;">Garantice el correcto y oportuno cumplimiento de sus obligaciones tributarias. Evaluamos su situación fiscal para asegurar que se apegue a la legislación vigente, identificando riesgos y oportunidades de optimización. Nuestro objetivo es darle tranquilidad ante la administración tributaria y evitar sanciones innecesarias.</p>
             </div>
           </div>
           <!-- End servicios Item -->
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
+            <div class="servicios-item featured" id="auditoria-operativa">
+              <h3>Auditoría Operativa</h3>
+              <p style="text-align: justify;">Analizamos la eficiencia y eficacia de sus procesos internos. Evaluamos cómo se utilizan sus recursos (humanos, materiales y tecnológicos) para identificar cuellos de botella, reducir costos y mejorar la productividad. Le entregamos recomendaciones prácticas para optimizar sus operaciones y potenciar su rentabilidad.</p>
             </div>
           </div>
           <!-- End servicios Item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured" id="auditoria-cumplimiento">
+              <h3>Auditoría de Cumplimiento</h3>
+              <p style="text-align: justify;">Verificamos que su organización opera en conformidad con las leyes, regulaciones, contratos y políticas internas que le aplican. Este servicio es clave para mitigar riesgos legales y proteger la reputación de su empresa, asegurando que todas las actividades se desarrollen dentro del marco normativo correspondiente.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured" id="auditoria-gestion">
+              <h3>Auditoría de Gestión</h3>
+              <p style="text-align: justify;">Vamos más allá de los números para evaluar el desempeño de la administración en el logro de los objetivos estratégicos de la empresa. Analizamos la efectividad de las políticas, la toma de decisiones y la estructura organizacional para ofrecer una visión clara sobre el rendimiento directivo y la alineación de la gestión con la visión de la compañía.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured" id="auditoria-sistemas">
+              <h3>Auditoría de Sistemas (TI)</h3>
+              <p style="text-align: justify;">En un mundo digital, la seguridad de su información es vital. Evaluamos la integridad, fiabilidad y seguridad de sus sistemas de información y tecnología (TI). Analizamos sus controles, infraestructura y políticas de ciberseguridad para proteger sus datos, asegurar la continuidad del negocio y garantizar que la tecnología respalde eficazmente sus objetivos.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured" id="auditoria-gubernamental">
+              <h3>Auditoría Gubernamental</h3>
+              <p style="text-align: justify;">Ofrecemos servicios especializados para entidades del sector público, enfocados en garantizar la transparencia, la rendición de cuentas y el uso eficiente de los fondos públicos. Nuestra auditoría se realiza en estricto apego a la normativa gubernamental aplicable, fortaleciendo la confianza ciudadana y la gestión pública.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="servicios-item featured" id="auditoria-cierre-ejercicio">
+              <h3>Auditoría de Cierre de Ejercicio</h3>
+              <p style="text-align: justify;">Le asistimos en el proceso crítico de cierre contable y fiscal anual. Revisamos y validamos las cifras, realizamos los ajustes necesarios y preparamos su información para la presentación de los estados financieros finales y las declaraciones correspondientes. Asegure un cierre ordenado, preciso y sin contratiempos.</p>
+            </div>
+          </div>
+          <!-- End servicios Item -->
+
         </div>
       </div>
     </section>
