--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
           <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h5 style="text-align: justify;">
